--- a/angular.json
+++ b/angular.json
@@ -37,10 +37,7 @@
             },
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": false,
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "prerender": false
           },
           "configurations": {
             "production": {
