--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,7 @@
               ]
             },
             "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": false,
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "prerender": false
           },
           "configurations": {
             "production": {
