--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
+              "src/assets/family_seal.ico",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -89,6 +91,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets/family_seal.ico",
               {
                 "glob": "**/*",
                 "input": "public"
