--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
           # Your angular.json specifies outputPath: "dist/my-resume-app".
           # For SSR-enabled Angular apps, the client-side files are typically in a 'browser' subfolder.
           publish_dir: ./dist/my-resume-app/browser
