--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.DEPLOY_TOKEN }}
           # Your angular.json specifies outputPath: "dist/my-resume-app".
-          # For SSR-enabled Angular apps, the client-side files are typically in a 'browser' subfolder.
-          publish_dir: ./dist/my-resume-app/browser
+          # Since prerender is false, files are directly in dist/my-resume-app.
+          publish_dir: ./dist/my-resume-app
           # Optional: If you use a custom domain, create a repository variable named CNAME with your domain.
           # cname: ${{ vars.CNAME || '' }}
