--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -6,7 +6,9 @@ on:
       - main # Or your default branch
 
 permissions:
-  contents: write # Allows the action to push to the gh-pages branch
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -30,14 +32,14 @@ jobs:
         # The --configuration production flag ensures a production build.
         # The base href from src/index.html (which is "/") will be used,
         # which is correct for a GitHub user/organization page (username.github.io).
-        run: npm run build -- --configuration production
+        run: npm run build --configuration production
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.DEPLOY_TOKEN }}
-          # Your angular.json specifies outputPath: "dist/my-resume-app".
-          # Since prerender is false, files are directly in dist/my-resume-app.
-          publish_dir: ./dist/my-resume-app
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Your angular.json specifies outputPath: "dist/brian-e-ramirez-zea.github.io".
+          # Since prerender is false, files are directly in dist/brian-e-ramirez-zea.github.io.
+          publish_dir: ./dist/brian-e-ramirez-zea.github.io
           # Optional: If you use a custom domain, create a repository variable named CNAME with your domain.
           # cname: ${{ vars.CNAME || '' }}
