--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -38,8 +38,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # Your angular.json specifies outputPath: "dist/brian-e-ramirez-zea.github.io".
-          # Since prerender is false, files are directly in dist/brian-e-ramirez-zea.github.io.
-          publish_dir: ./dist/brian-e-ramirez-zea.github.io
+          # Your angular.json specifies outputPath: "dist/my-resume-app".
+          # Since prerender is false, files are directly in dist/my-resume-app.
+          publish_dir: ./dist/my-resume-app
           # Optional: If you use a custom domain, create a repository variable named CNAME with your domain.
           # cname: ${{ vars.CNAME || '' }}
