--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.12",
+    "@google/generative-ai": "^0.24.1",
     "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
